--- a/vite-forms/index.html
+++ b/vite-forms/index.html
@@ -19,6 +19,8 @@
       <input type="text" class="inputs" name="" id="" placeholder="Email">
       <input type="text" class="inputs" name="" id="" placeholder="Local">
       <br>
+      <textarea class="inputs" name="" id="" placeholder="Write your offer/tips or ideas here!"></textarea>
+      <br>
       <input type="submit" class="submitbutton" name="" id="submit">
     
     </div>
